[tool.poetry]
package-mode = true
name = "dpk-pdf2parquet"
version = "0.2.2.dev0"
description = "PDF2PARQUET Python Transform"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Michele Dolfi <dol@zurich.ibm.com>",
    "Christoph Auer <cau@zurich.ibm.com>"
]

# Needed so we do not pull in kfp nor test
packages = [{include = "pdf2parquet"},
            {include = "pdf2parquet_ray"},
]

[tool.poetry.dependencies]
python = "^3.10, < 3.12"
data-prep-toolkit="^0.2.1"
data-prep-toolkit-ray={ version="^0.2.1", optional=true }
docling-core="1.3.0"
docling-ibm-models="1.1.7"
deepsearch-glm="0.21.0"
docling="1.11.0"
filetype="^1.2.0"

[tool.poetry.dev-dependencies]
twine="*"
pytest="^7.3.2"
pytest-dotenv="^0.5.2"
pytest-env="^1.0.0"
pre-commit="^3.3.2"
pytest-cov="^4.1.0"
pytest-mock="^3.10.0"
moto="5.0.5"
markupsafe="^2.0.1"

[tool.poetry.extras]
ray = ["data-prep-toolkit-ray"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
#addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]

